fidex up height check

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2464,19 +2464,22 @@ body {
     display: none;
 }
 .phone_menu_controler {
+    --menuPosition: 0;
     position: fixed;
     left: 0;
     right: 0;
-    bottom: 0;
-    transform: translateY(100%);
+    top: 0;
     border-radius: 0.5rem 0.5rem 0 0;
     @include flex(column, center, center);
+
     height: auto;
     width: 100%;
     background: var(--NVC);
-    z-index: 6;
     transition: var(--T_M);
+    transform: var(--menuPosition);
+    z-index: 6;
     overflow: hidden;
+
     opacity: 0;
     display: none;
     .extra_btns_container,
