--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -380,8 +380,7 @@ body {
     cursor: pointer;
 }
 .desk_me {
-    transition: all 1000ms;
-    transition-timing-function: ease-in-out;
+    transition: all 1000ms ease-in-out;
     transform: translateX(100%);
 }
 .deskwork_icon {
@@ -2121,7 +2120,7 @@ body {
             line-height: 1;
         }
     }
-    .content {
+    .divider_content {
         padding: 20rem 0;
         opacity: 0;
         transform: translateX(-100%);
@@ -2134,7 +2133,7 @@ body {
     }
 }
 .section_divider:nth-of-type(2n) {
-    .content {
+    .divider_content {
         transform: translateX(100%);
     }
     .show_quote {
