--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -719,7 +719,7 @@ body {
     .icon_hide {
         opacity: 0;
         transform: translateY(4rem);
-        transition: var(--T_S);
+        transition: var(--T_M);
     }
     .icon_show {
         opacity: 0.7;
